--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.DS_Store
+
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
@@ -29,7 +31,6 @@ DerivedData/
 *.ipa
 *.dSYM.zip
 *.dSYM
-
 ## Playgrounds
 timeline.xctimeline
 playground.xcworkspace
